--- a/Samim.PresentationLayer/Views/Shared/_Layout.cshtml
+++ b/Samim.PresentationLayer/Views/Shared/_Layout.cshtml
@@ -1,24 +1,27 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - Samim.PresentationLayer</title>
-	<environment include="Development">
-		<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-	</environment>
-	<environment exclude="Development">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			  asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-			  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
-			  crossorigin="anonymous"
-			  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
-	</environment>
-	<link rel="stylesheet" href="~/css/site.css" />
-	@* Font awesome reference starts here *@
-	<link href="~/fontawesome-free-5.10.1-web/css/v4-shims.css" rel="stylesheet" />
-	<link href="~/fontawesome-free-5.10.1-web/css/regular.css" rel="stylesheet" />
-	@* Font awesome reference ends here *@
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Samim.PresentationLayer</title>
+    <environment include="Development">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
+              crossorigin="anonymous"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
+    </environment>
+    <link rel="stylesheet" href="~/css/site.css" />
+    @* Font awesome reference starts here *@
+    <link href="~/fontawesome-free-5.10.1-web/css/v4-shims.css" rel="stylesheet" />
+    <link href="~/fontawesome-free-5.10.1-web/css/regular.css" rel="stylesheet" />
+    @* Font awesome reference ends here *@
+    @* jQuery reference starts here *@
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    @* jQuery reference ends here *@
 </head>
 <body>
 	<header>
