SideBarMenu is functionalgit add .

--- a/Samim.PresentationLayer/Views/Shared/_AccountLayout.cshtml
+++ b/Samim.PresentationLayer/Views/Shared/_AccountLayout.cshtml
@@ -16,6 +16,7 @@
 	</environment>
 	<link rel="stylesheet" href="~/css/site.css" />
 	@* Font awesome reference starts here *@
+	<link href="~/fontawesome-free-5.10.1-web/css/all.css" rel="stylesheet" />
 	<link href="~/fontawesome-free-5.10.1-web/css/v4-shims.css" rel="stylesheet" />
 	<link href="~/fontawesome-free-5.10.1-web/css/regular.css" rel="stylesheet" />
 	@* Font awesome reference ends here *@
@@ -24,49 +25,14 @@
 	@* jQuery reference ends here *@
 </head>
 <body>
-	<header>
-		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-			<div class="container">
-				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Samim.PresentationLayer</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-						aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-					<ul class="navbar-nav flex-grow-1">
-						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</header>
-
+	
 	<div class="container">
 		<partial name="_CookieConsentPartial" />
 		<main role="main" class="pb-3">
-			<div class="row">
-				<div class="col-md-3">
-					<div class=" shadow p-3 mb-5 bg-white rounded" style="min-height:450px">
-						<partial name="_SideBarMenu" />
-					</div>
-				</div>
-				<div class="col-md-9">
-					@RenderBody()
-				</div>
-			</div>
+			@RenderBody()
 		</main>
 	</div>
 
-	<footer class="border-top footer text-muted">
-		<div class="container">
-			&copy; 2019 - Samim.PresentationLayer - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-		</div>
-	</footer>
 
 	<environment include="Development">
 		<script src="~/lib/jquery/dist/jquery.js"></script>
