--- a/Samim.PresentationLayer/Views/Shared/_SideBarMenuBody.cshtml
+++ b/Samim.PresentationLayer/Views/Shared/_SideBarMenuBody.cshtml
@@ -15,7 +15,7 @@
 			}
 			else
 			{
-				<a class="SideBarMenuAnchorTag" href="#">@item.Title</a>
+				<a class="SideBarMenuAnchorTag" href="/@item.Title/Index">@item.Title</a>
 			}
 		</li>
 	}
