--- a/Samim.PresentationLayer/Views/Shared/_Layout.cshtml
+++ b/Samim.PresentationLayer/Views/Shared/_Layout.cshtml
@@ -17,7 +17,12 @@
 	<link rel="stylesheet" href="~/css/site.css" />
 	@* Font awesome reference starts here *@
 	<link href="~/fontawesome-free-5.10.1-web/css/v4-shims.css" rel="stylesheet" />
+	<link href="~/fontawesome-free-5.10.1-web/css/all.css" rel="stylesheet" />
+	<link href="~/fontawesome-free-5.10.1-web/css/brands.css" rel="stylesheet" />
+	<link href="~/fontawesome-free-5.10.1-web/css/fontawesome.css" rel="stylesheet" />
 	<link href="~/fontawesome-free-5.10.1-web/css/regular.css" rel="stylesheet" />
+	<link href="~/fontawesome-free-5.10.1-web/css/solid.css" rel="stylesheet" />
+	<link href="~/fontawesome-free-5.10.1-web/css/svg-with-js.css" rel="stylesheet" />
 	@* Font awesome reference ends here *@
 	@* jQuery reference starts here *@
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
