--- a/Samim.PresentationLayer/Views/Shared/_SideBarMenu.cshtml
+++ b/Samim.PresentationLayer/Views/Shared/_SideBarMenu.cshtml
@@ -34,11 +34,10 @@
 	#sideBarMenuFilter:hover {
 		border-color: blue;
 	}
-
 </style>
 
 <script type="text/javascript">
-	$("body").on("click", "a", function (event) {
+	$("body").on("click", "a.SideBarMenuAnchorTag", function (event) {
 		var anchorTagId = event.target.id;
 		var spanTagElement = document.getElementById("span" + anchorTagId);
 		var divTagElement = document.getElementById("div" + anchorTagId);
