--- a/Samim.PresentationLayer/Views/User/_Create.cshtml
+++ b/Samim.PresentationLayer/Views/User/_Create.cshtml
@@ -56,7 +56,7 @@
 				<label asp-for="Password">
 				</label>
 				<div class="inner-addon right-addon">
-					<a href="#" onmousedown="EyeButtonMouseDownFunction()" onmouseup="EyeButtonMouseUpFunction()"><i class="fa fa-eye"></i></a>
+					<a id="eyeButton" href="#" onmousedown="EyeButtonMouseDownFunction()" onmouseup="EyeButtonMouseUpFunction()"><i class="fa fa-eye"></i></a>
 					<input id="passwordInput" class="form-control form-control-sm" type="password" />
 				</div>
 			</div>
